# To-do-list

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  docker_ci_config.py  docker_config.py  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: deploy_main.yaml  push_any.yaml  push_any_expect_main.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
tests/: app_tests.py  conftest.py  factories.py  fixtures.py
tests/test_core/: bot_tests.py  factories.py  test_signup.py
to_do_list/: settings.py  urls.py
to_do_list/bot/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
to_do_list/bot/management/: _chat.py  _state.py
to_do_list/bot/management/commands/: runbot.py
to_do_list/bot/migrations/: 0001_initial.py  0002_alter_tguser_options_tguser_telegram_user_id_and_more.py  0002_alter_tguser_user_alter_tguser_verification_code.py
to_do_list/bot/tg/: client.py  schemas.py
to_do_list/core/: admin.py  apps.py  fields.py  models.py  serializers.py  urls.py  views.py
to_do_list/core/migrations/: 0001_initial.py
to_do_list/goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
to_do_list/goals/migrations/: 0001_add_goals_categorey_model.py  0001_initial.py  0002_add_goal_model.py  0003_add_comments_model.py  0004_alter_goal_due_date_alter_goal_priority_and_more.py  0005_alter_goal_due_date_alter_goal_priority_and_more.py
